Add "expectedDbType" config option for DBUnit and dbunit.yml.

--- a/rider-core/src/test/resources/config/sample-dbunit.yml
+++ b/rider-core/src/test/resources/config/sample-dbunit.yml
@@ -2,6 +2,7 @@ cacheConnection: false
 cacheTableNames: false
 leakHunter: true
 raiseExceptionOnCleanUp: true
+expectedDbType: HSQLDB
 properties:
   batchedStatements:  true
   caseSensitiveTableNames: false
