--- a/rider-examples/pom.xml
+++ b/rider-examples/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.github.database-rider</groupId>
         <artifactId>rider-parent</artifactId>
-        <version>1.15.4-SNAPSHOT</version>
+        <version>1.16.0</version>
     </parent>
 
     <artifactId>rider-examples</artifactId>
