--- a/rider-examples/quarkus-dbunit-sample/pom.xml
+++ b/rider-examples/quarkus-dbunit-sample/pom.xml
@@ -10,7 +10,7 @@
      <artifactId>rider-quarkus-sample</artifactId>
 
      <properties>
-        <quarkus.version>1.1.1.Final</quarkus.version>
+        <quarkus.version>1.7.0.Final</quarkus.version>
         <surefire.version>2.22.0</surefire.version>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -74,6 +74,12 @@
             <artifactId>rider-cdi</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>stax</groupId>
+                    <artifactId>stax-api</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.assertj</groupId>
