--- a/rider-core/src/test/resources/datasets/yml/include-yml-replacements.yml
+++ b/rider-core/src/test/resources/datasets/yml/include-yml-replacements.yml
@@ -1,5 +1,3 @@
 TWEET:
   - ID: "1"
-    CONTENT: "[INCLUDE]datasets/yml/include-yml-replacements.yml"
-
-
+    CONTENT: "[INCLUDE]datasets/yml/doc.yml"
