--- a/rider-examples/jpa-productivity-boosters/pom.xml
+++ b/rider-examples/jpa-productivity-boosters/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.github.database-rider</groupId>
         <artifactId>rider-examples</artifactId>
-        <version>1.32.3</version>
+        <version>1.32.4-SNAPSHOT</version>
     </parent>
 
     <artifactId>jpa-productivity-boosters</artifactId>
