--- a/rider-junit5/pom.xml
+++ b/rider-junit5/pom.xml
@@ -133,6 +133,11 @@
                             <classifier>jakarta</classifier>
                         </configuration>
                     </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-install-plugin</artifactId>
+                        <version>2.5.2</version>
+                    </plugin>
                 </plugins>
             </build>
         </profile>
